force-app/main/default/objects/ssot__Account__dlm/ssot__Account__dlm.object-meta.xml
<CustomObject>
    <label>Account</label>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isSqlDmo>false</isSqlDmo>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Account</labelOverride>
        <masterLabel>Account</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityGroup>Account</referenceEntityGroup>
        <referenceEntityName>Account</referenceEntityName>
        <referenceEntitySubjectArea>Account</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>