force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountSegmentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountSegmentType__c</fullName>
    <label>Account Segment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Segment Type</masterLabel>
        <refAttrDeveloperName>AccountSegmentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>