force-app/main/default/objects/ssot__Account__dlm/fields/ssot__AccountType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AccountType__c</fullName>
    <label>Account Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Account Type</masterLabel>
        <refAttrDeveloperName>AccountType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>