force-app/main/default/objects/ssot__Account__dlm/fields/ssot__GroupSize__c.field-meta.xml
<CustomField>
    <fullName>ssot__GroupSize__c</fullName>
    <label>Group Size</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Group Size</masterLabel>
        <refAttrDeveloperName>GroupSize</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>