force-app/main/default/objects/ssot__Account__dlm/fields/ssot__RecordType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordType__c</fullName>
    <label>Record Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Record Type</masterLabel>
        <refAttrDeveloperName>RecordType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>